--- a/package.json
+++ b/package.json
@@ -3,8 +3,15 @@
   "version": "0.0.1",
   "dependencies": {
     "angular": "1.7.0",
+    "@uirouter/angularjs": "^1.0.15",
+    "angular-route": "~1.5.11",
     "angular-bootstrap": "0.12.2",
-    "angular-highlightjs": "0.7.1"
+    "angular-highlightjs": "0.7.1",
+    "angular-cookies": "~1.5.11",
+    "ngstorage": "latest",
+    "bootstrap": "4.1.1",
+    "underscore": "1.9.0",
+    "font-awesome": "4.7.0"
   },
   "devDependencies": {
     "grunt": "~0.4.5",
