--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
     "ngstorage": "latest",
     "bootstrap": "4.1.1",
     "underscore": "1.9.0",
-    "font-awesome": "4.7.0"
+    "font-awesome": "4.7.0",
+    "codemirror": "5.37.0",
+    "angular-ui-codemirror": "0.3.0",
+    "ace-builds": "1.3.3",
+    "angular-ui-ace": "0.2.3"
   },
   "devDependencies": {
     "grunt": "~0.4.5",
