--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: '1.5.4.RELEASE'
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-thymeleaf', version: '1.5.1.RELEASE'
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-jdbc', version: '1.5.6.RELEASE'
+    compile group: 'com.github.jsqlparser', name: 'jsqlparser', version: '1.2'
 
     compile group: 'mysql', name: 'mysql-connector-java', version: '5.1.6'
 
