--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "codemirror": "5.37.0",
     "angular-ui-codemirror": "0.3.0",
     "ace-builds": "1.3.3",
-    "angular-ui-ace": "0.2.3"
+    "angular-ui-ace": "0.2.3",
+    "sql-formatter": "2.3.1"
   },
   "devDependencies": {
     "grunt": "~0.4.5",
