--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,7 @@ dependencies {
 
     compile group: 'mysql', name: 'mysql-connector-java', version: '5.1.6'
 
+    compile files("$rootProject.projectDir/src/main/resources/libs/gsp.jar")
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
